// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card/> Renders the <Card/> and toggles the card feature 1`] = `
<div
  class="card__Group-sc-s87lnr-2 iPLcwt"
>
  <div
    class="card__Container-sc-s87lnr-1 dZnHAW"
  >
    <p
      class="card__Title-sc-s87lnr-0 lbYsMT"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-sc-s87lnr-12 QjMdK"
    >
      <div
        class="card__Item-sc-s87lnr-13 gKZWBW"
        data-testid="tiger-king-item-feature"
      >
        <img
          class="card__Image-sc-s87lnr-14 kzrBmK"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-sc-s87lnr-11 bGkhjC"
        >
          <p
            class="card__SubTitle-sc-s87lnr-3 hgZZuP"
          >
            Tiger King
          </p>
          <p
            class="card__Text-sc-s87lnr-4 SqfPO"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-sc-s87lnr-1 dZnHAW"
  >
    <p
      class="card__Title-sc-s87lnr-0 lbYsMT"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-sc-s87lnr-12 QjMdK"
    >
      <div
        class="card__Item-sc-s87lnr-13 gKZWBW"
        data-testid="juno-item-feature"
      >
        <img
          class="card__Image-sc-s87lnr-14 kzrBmK"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-sc-s87lnr-11 bGkhjC"
        >
          <p
            class="card__SubTitle-sc-s87lnr-3 hgZZuP"
          >
            Juno
          </p>
          <p
            class="card__Text-sc-s87lnr-4 SqfPO"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card/> Renders the <Card/> with populated data 1`] = `
<div
  class="card__Group-sc-s87lnr-2 iPLcwt"
>
  <div
    class="card__Container-sc-s87lnr-1 dZnHAW"
  >
    <p
      class="card__Title-sc-s87lnr-0 lbYsMT"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-sc-s87lnr-12 QjMdK"
    >
      <div
        class="card__Item-sc-s87lnr-13 gKZWBW"
      >
        <img
          class="card__Image-sc-s87lnr-14 kzrBmK"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-sc-s87lnr-11 bGkhjC"
        >
          <p
            class="card__SubTitle-sc-s87lnr-3 hgZZuP"
          >
            Tiger King
          </p>
          <p
            class="card__Text-sc-s87lnr-4 SqfPO"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-sc-s87lnr-1 dZnHAW"
  >
    <p
      class="card__Title-sc-s87lnr-0 lbYsMT"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-sc-s87lnr-12 QjMdK"
    >
      <div
        class="card__Item-sc-s87lnr-13 gKZWBW"
      >
        <img
          class="card__Image-sc-s87lnr-14 kzrBmK"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-sc-s87lnr-11 bGkhjC"
        >
          <p
            class="card__SubTitle-sc-s87lnr-3 hgZZuP"
          >
            Juno
          </p>
          <p
            class="card__Text-sc-s87lnr-4 SqfPO"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
